<resources>
    <string name="app_name">Events</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="settings_title">Settings</string>
    <string name="notifications_section">Notifications</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
    <string name="sms_notifications_description">Receive SMS reminders for upcoming events</string>
    <string name="appearance_section">Appearance</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_description">Switch to dark theme for better visibility</string>
    <string name="account_section">Account</string>
    <string name="logout_button">Logout</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="active_events_title">Active Events</string>
    <string name="no_active_events_found">No active events found</string>
    <string name="archived_events_title">Archived Events</string>
    <string name="no_archived_events_found">No archived events found</string>
    <string name="help_title">Help</string>
    <string name="help_content">Welcome to the Events app!\n\n- To add an event, go to the Add tab.\n- To view events, go to the View tab.\n- To search events, use the Search tab.\n- Manage your settings in the Settings tab.</string>
</resources>